# name2port

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  name_to_free_port.py  pyproject.toml
name2port/: __init__.py  cli.py
